# LostTraderBot

./: .gitignore  .gitmodules  LICENSE  MeanReversingStrategy.py  MovingAveragesCrossStrategy.py  README.md  backtest.py  data.py  event.py  execution.py  performance.py  portfolio.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  strategy.py
datasets/: dataset_1h_AAPL.csv  dataset_AAPL.csv
examples/datasets/: dataset_1h_AAPL.csv  dataset_1h_GOOG.csv  dataset_1h_MSFT.csv
examples/notebooks/: macd_strategy.ipynb
examples/scripts/: AmericanVanillaOption.py  data_collector.py
examples/strategies/: MeanReversingStrategy.py  MovingAveragesCrossStrategy.py
extras/: stock_ticker.cpp
losttraderbot/: backtest.py  data.hpp  data.py  event.cpp  event.hpp  execution.py  logger.py  performance.py  portfolio.hpp  portfolio.py
losttraderbot/closttraderbot/: backtest.cpp  backtest.hpp  data.cpp  data.hpp  event.cpp  event.hpp  execution.hpp  main.cpp  portfolio.hpp  strategy.cpp  strategy.hpp
src/: backtest.py  data.py  execution.py  performance.py
src/cpp/: backtest.cpp  backtest.hpp  data.cpp  data.hpp  event.cpp  event.hpp  execution.cpp  execution.hpp  main.cpp  portfolio.cpp  portfolio.hpp  strategy.cpp  strategy.hpp
src/python/losttraderbot/: __init__.py  data.py  strategy.py
