[metadata]
name = losttraderbot
version = 0.1.0
author = Reidmen Arostica
author_email = r.rethmawn@gmaio.com
description = Event-driven Backend Tester
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
include_package_data = True
install_requires =
    numpy
    pandas
    yfinance

[options.extra_require]
dev =
    black
    flake8

